--- a/mysite/accounts/templates/accounts/dprofile.html
+++ b/mysite/accounts/templates/accounts/dprofile.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -9,7 +9,7 @@
             line-height: 1.8;
             color: #222;
             font-family: 'Montserrat';
-            background: url('https://images.unsplash.com/photo-1553702446-4a0cfb5781f8?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&w=1000&q=80');
+            background: url('{% static 'back.jpg' %}');
             background-repeat: no-repeat;
             background-position: center;
             background-size: cover;
