--- a/mysite/accounts/templates/accounts/aprofile.html
+++ b/mysite/accounts/templates/accounts/aprofile.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,7 +10,7 @@
             line-height: 1.8;
             color: #222;
             font-family: 'Montserrat';
-            background: url('https://i.pinimg.com/originals/69/00/c1/6900c17fa44aafc5ddec62ac8c4d2fc2.jpg');
+            background: url('{% static 'bg5.jpg' %}');
             background-repeat: no-repeat;
             background-position: center;
             background-size: cover;
