--- a/mysite/accounts/templates/accounts/dprofile.html
+++ b/mysite/accounts/templates/accounts/dprofile.html
@@ -9,7 +9,7 @@
             line-height: 1.8;
             color: #222;
             font-family: 'Montserrat';
-            background: url('{% static 'back.jpg' %}');
+            background: url('{% static 'bg2.jpg' %}');
             background-repeat: no-repeat;
             background-position: center;
             background-size: cover;
