--- a/mysite/accounts/templates/accounts/dsignup.html
+++ b/mysite/accounts/templates/accounts/dsignup.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,7 +10,7 @@
         line-height: 1.8;
         color: #222;
         font-family: 'Montserrat';
-        background: url('https://image.jimcdn.com/app/cms/image/transf/dimension=940x10000:format=jpg/path/s3a81a36d941845b6/image/i012a814098cf7c87/version/1506917997/spirit-island-on-the-maligne-lake-best-photography-locations-in-jasper-national-park.jpg');
+        background: url('{% static 'bg2.jpg' %}');
         background-repeat: no-repeat;
         background-position: center;
         background-size: cover;
