--- a/mysite/accounts/templates/accounts/pprofile.html
+++ b/mysite/accounts/templates/accounts/pprofile.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,7 +10,7 @@
             line-height: 1.8;
             color: #222;
             font-family: 'Montserrat';
-            background: url('https://i.pinimg.com/originals/2e/55/a0/2e55a06353e043ae289ba54fcb2140f3.jpg');
+            background: url('{% static 'bg4.jpg' %}');
             background-repeat: no-repeat;
             background-position: center;
             background-size: cover;
