--- a/mysite/accounts/templates/accounts/psignup.html
+++ b/mysite/accounts/templates/accounts/psignup.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,7 +10,7 @@
         line-height: 1.8;
         color: #222;
         font-family: 'Montserrat';
-        background: url('https://eskipaper.com/images/amazing-pink-sunset-1.jpg');
+        background: url('{% static 'bg1.jpg' %}');
         background-repeat: no-repeat;
         background-position: center;
         background-size: cover;
