--- a/T45_DarkArmy/templates/home.html
+++ b/T45_DarkArmy/templates/home.html
@@ -1,10 +1,126 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<meta charset="UTF-8">
+<title>Home Page</title>
+<style>
+body{
+    background:white;
+    min-height: 3000px;
+}
+section{
+    position: relative;
+    width: 100%;
+    height: 120vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+section:before{
+    content: '';
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 100px;
+    background: linear-gradient(to top, #0a2a43,transparent);
+    z-index: 10000;
+}
+section:after{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    /*background:  #b9daf1;*/
+    z-index: 10000;
+    mix-blend-mode: color;
+}
+#car1{
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 50%;
+    height: 50%;
+    object-fit: cover;
+    pointer-events: none;
+}
+#col{
+    position: absolute;
+    bottom: 0;
+    left:500px;
+    width: 20%;
+    height: 20%;
+    object-fit: cover;
+    pointer-events: none;
+}
+#car2{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 50%;
+    height: 50%;
+    object-fit: cover;
+    pointer-events: none;
+}
+#text{
+    position: relative;
+    color: black;
+    font-size: 10em;
+    font-family:'Times New Roman', Times, serif;
+    z-index: 1;
+}
+    </style>
 </head>
 <body>
-<h3>You are at HomePage</h3>
+    <section>
+        <img src="{% static 'car1.png' %}" id="car1">
+        <img src="{% static 'col.png' %}" id="col">
+        <img src="{% static 'car2.jpg' %}" id="car2">
+        <h2 id="text">Highway Protocol</h2>
+        <script type="text/javascript">
+                let car1=document.getElementById("car1");
+                let col=document.getElementById("col");
+                let car2=document.getElementById("car2");
+                let text=document.getElementById("text");
+
+                window.addEventListener('scroll',function(){
+                    var value=window.scrollY;
+                    car1.style.top=value * 0.5 + 'px';
+                    col.style.bottom=value * 2 + 'px';
+                    car2.style.bottom=value * 0.3 + 'px';
+                    text.style.bottom=value * 0.5 + 'px';
+                })
+        </script>
+    </section>
+    <div class="w3-top">
+        <div class="w3-row w3-large w3-light-grey">
+            <div class="w3-col s3">
+                <a href="#" class="w3-button w3-block">Home</a>
+              </div>
+              <div class="w3-col s3">
+                <a href="#" class="w3-button w3-block">Home</a>
+              </div>
+              <div class="w3-col s3">
+                <a href="#" class="w3-button w3-block">Home</a>
+              </div>
+              <div class="w3-col s3">
+                <a href="#" class="w3-button w3-block">Home</a>
+              </div>
+              <div class="w3-col s4">
+                <button class="w3-button w3-block" type="submit"> Signup for User</button>
+            </div>
+            <div class="w3-col s4">
+                <button class="w3-button w3-block" type="submit"> Signup for Doctors</button>
+            </div>
+            <div class="w3-col s4">
+                <button class="w3-button w3-block" type="submit"> Signup for Agents</button>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
