--- a/T45_DarkArmy/accounts/templates/accounts/addimg.html
+++ b/T45_DarkArmy/accounts/templates/accounts/addimg.html
@@ -93,7 +93,7 @@
     style="padding-top: 150px;
     padding-bottom: 50px;
      background-color:#ff6666">
-    <form class="site-form" action="{% url 'accounts:addimg' %}" method="post" enctype="multipart/form-data">
+    <form class="site-form" action="{% url 'accounts:nhosps' %}" method="post" enctype="multipart/form-data">
         {%csrf_token%}
         <p class="text-white">{{ form.as_p }}</p>
         {% if request.GET.next%}
