--- a/T45_DarkArmy/templates/home.html
+++ b/T45_DarkArmy/templates/home.html
@@ -7,96 +7,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <meta charset="UTF-8">
 <title>Home Page</title>
-<style>
-body{
-    background:white;
-    min-height: 3000px;
-}
-section{
-    position: relative;
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-section:before{
-    content: '';
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 100px;
-    background: linear-gradient(to top, #0a2a43,transparent);
-    z-index: 10000;
-}
-section:after{
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    /*background:  #b9daf1;*/
-    z-index: 10000;
-    mix-blend-mode: color;
-}
-#car1{
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 55%;
-    height: 55%;
-    object-fit: cover;
-    pointer-events: none;
-}
-#car2{
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 50%;
-    height: 50%;
-    object-fit: cover;
-    pointer-events: none;
-}
-#col{
-    position: absolute;
-    bottom: 0;
-    left:500px;
-    width: 20%;
-    height: 20%;
-    object-fit: cover;
-    pointer-events: none;
-}
-#text{
-    position: relative;
-    color: black;
-    font-size: 10em;
-    font-family:'Times New Roman', Times, serif;
-    z-index: 1;
-}
-    </style>
 </head>
 <body>
-    <section>
-        <img src="{% static 'car1.png' %}" id="car1">
-        <img src="{% static 'car2.jpg' %}" id="car2">
-        <img src="{% static 'col.png' %}" id="col">
-        <h2 id="text">Highway Protocol</h2>
-        <script type="text/javascript">
-                let car1=document.getElementById("car1");
-                let car2=document.getElementById("car2");
-                let col=document.getElementById("col");
-                let text=document.getElementById("text");
-
-                window.addEventListener('scroll',function(){
-                    var value=window.scrollY;
-                    car1.style.top=value * 0.5 + 'px';
-                    car2.style.bottom=value * 0.3 + 'px';
-                    col.style.bottom=value * 2 + 'px';
-                    text.style.bottom=value * 0.25 + 'px';
-                })
-        </script>
-    </section>
     <div class="w3-top">
         <div class="w3-row w3-large w3-light-grey">
             <div class="w3-col s3">
@@ -122,5 +34,58 @@ section:after{
             </div>
         </div>
     </div>
+    <div class="w3-content" style="max-width:2000px;margin-top:46px">
+        <!-- Automatic Slideshow Images -->
+        <div class="mySlides w3-display-container w3-center">
+          <img src="https://i0.wp.com/orthospinenews.com/wp-content/uploads/2020/04/Are-Hospitals-Making-as-Much-Money-as-You-Think1.jpg?fit=600%2C350&ssl=1" style="width:100%">
+          <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
+            <h3>Los Angeles</h3>
+            <p><b>We had the best time playing at Venice Beach!</b></p>   
+          </div>
+        </div>
+        <div class="mySlides w3-display-container w3-center">
+          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQYuv6x49dg_UMnrkK6gkGLWEnPCQuNwcoZnA&usqp=CAU" style="width:100%">
+          <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
+            <h3>New York</h3>
+            <p><b>The atmosphere in New York is lorem ipsum.</b></p>    
+          </div>
+        </div>
+        <div class="mySlides w3-display-container w3-center">
+          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRLOOjMzqRfDNVjIRi0uaBLVY3JA9uh3Sghlg&usqp=CAU" style="width:100%">
+          <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
+            <h3>Chicago</h3>
+            <p><b>Thank you, Chicago - A night we won't forget.</b></p>    
+          </div>
+        </div>
+    </div>
+    <script>
+        // Automatic Slideshow - change image every 4 seconds
+        var myIndex = 0;
+        carousel();
+        
+        function carousel() {
+          var i;
+          var x = document.getElementsByClassName("mySlides");
+          for (i = 0; i < x.length; i++) {
+            x[i].style.display = "none";  
+          }
+          myIndex++;
+          if (myIndex > x.length) {myIndex = 1}    
+          x[myIndex-1].style.display = "block";  
+          setTimeout(carousel, 4000);    
+        }
+        </script>
+        <div class="w3-row w3-container">
+            <div class="w3-center w3-padding-64">
+                <span class="w3-xlarge w3-bottombar w3-border-dark-grey w3-padding-16">Organizations that support us</span>
+            </div>
+            <div  >
+            <div class="w3-col l12 m6 w3-grey w3-container w3-padding-16"  >
+                <h3>Hospitals that support us</h3>
+            </div>
+            <div class="w3-col l12 m6 w3-grey w3-container w3-padding-16"  >
+                <h3>Insurance Companies that support us</h3>
+            </div>
+        </div>
 </body>
 </html>
