--- a/T45_DarkArmy/templates/home.html
+++ b/T45_DarkArmy/templates/home.html
@@ -37,21 +37,21 @@
     <div class="w3-content" style="max-width:2000px;margin-top:46px">
         <!-- Automatic Slideshow Images -->
         <div class="mySlides w3-display-container w3-center">
-          <img src="https://i0.wp.com/orthospinenews.com/wp-content/uploads/2020/04/Are-Hospitals-Making-as-Much-Money-as-You-Think1.jpg?fit=600%2C350&ssl=1" style="width:100%">
+          <img src="{% static 'hosp1.jpg' %}" style="width:100%">
           <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
             <h3>Los Angeles</h3>
             <p><b>We had the best time playing at Venice Beach!</b></p>   
           </div>
         </div>
         <div class="mySlides w3-display-container w3-center">
-          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQYuv6x49dg_UMnrkK6gkGLWEnPCQuNwcoZnA&usqp=CAU" style="width:100%">
+          <img src="{% static 'hosp2.jpg' %}" style="width:100%">
           <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
             <h3>New York</h3>
             <p><b>The atmosphere in New York is lorem ipsum.</b></p>    
           </div>
         </div>
         <div class="mySlides w3-display-container w3-center">
-          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRLOOjMzqRfDNVjIRi0uaBLVY3JA9uh3Sghlg&usqp=CAU" style="width:100%">
+          <img src="{% static 'hosp3.jpg' %}" style="width:100%">
           <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
             <h3>Chicago</h3>
             <p><b>Thank you, Chicago - A night we won't forget.</b></p>    
@@ -87,5 +87,39 @@
                 <h3>Insurance Companies that support us</h3>
             </div>
         </div>
+        <div class="w3-center w3-padding-64" id="contact">
+          <span class="w3-xlarge w3-bottombar w3-border-dark-grey w3-padding-16">Contact Us</span>
+        </div>
+      
+          <form class="w3-container" method="post">
+          <div class="w3-section">
+            <label>Name</label>
+            <input class="w3-input w3-border w3-hover-border-black" style="width:100%;" type="text" name="Name" required>
+          </div>
+          <div class="w3-section">
+            <label>Email</label>
+            <input class="w3-input w3-border w3-hover-border-black" style="width:100%;" type="text" name="Email" required>
+          </div>
+          <div class="w3-section">
+            <label>Subject</label>
+            <input class="w3-input w3-border w3-hover-border-black" style="width:100%;" name="Subject" required>
+          </div>
+          <div class="w3-section">
+            <label>Message</label>
+            <input class="w3-input w3-border w3-hover-border-black" style="width:100%;" name="Message" required>
+          </div>
+          <button type="submit" class="w3-button w3-block w3-black">Send</button>
+        </form>
+        <footer class="w3-container w3-padding-32 w3-light-grey w3-center">
+          <a href="#" class="w3-button w3-black w3-margin"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
+          <div class="w3-xlarge w3-section">
+            <i class="fa fa-facebook-official w3-hover-opacity"></i>
+            <i class="fa fa-instagram w3-hover-opacity"></i>
+            <i class="fa fa-snapchat w3-hover-opacity"></i>
+            <i class="fa fa-pinterest-p w3-hover-opacity"></i>
+            <i class="fa fa-twitter w3-hover-opacity"></i>
+            <i class="fa fa-linkedin w3-hover-opacity"></i>
+          </div>
+        </footer>      
 </body>
 </html>
