--- a/T45_DarkArmy/accounts/templates/accounts/dlogin.html
+++ b/T45_DarkArmy/accounts/templates/accounts/dlogin.html
@@ -88,7 +88,7 @@
 </head>
 <body>
     <h1 align="center"
-    style="padding-top: 80px;padding-bottom: 10px;font-weight: 600;font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; background-color:#e60000";>Login</h1>
+    style="padding-top: 80px;padding-bottom: 10px;font-weight: 600;font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; background-color:#e60000";>Doctor Login</h1>
     <div class="container-fluid" align="center"
     style="padding-top: 150px;
     padding-bottom: 50px;
