--- a/T45_DarkArmy/accounts/templates/accounts/ilogin.html
+++ b/T45_DarkArmy/accounts/templates/accounts/ilogin.html
@@ -2,6 +2,10 @@
 <head>
     <title>Insurance Agent Login</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+        <link href="http://designify.me/code-snippets/animated-buttons/css/btns.css" rel="stylesheet">
+        <link href='http://fonts.googleapis.com/css?family=Ubuntu:400,500,700' rel='stylesheet' type='text/css'>
+        <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <style>
         .bubbly-button {
             font-family: 'Helvetica', 'Arial', sans-serif;
@@ -84,6 +88,16 @@
               background-size: 0% 0%, 0% 0%,  0% 0%,  0% 0%,  0% 0%,  0% 0%;
             }
           }
+          a.animated-button.victoria-one {
+	border: 2px solid #D24D57;
+}
+a.animated-button.victoria-one:after {
+	background: #D24D57;
+	-moz-transform: translateX(-50%) translateY(-50%) rotate(-25deg);
+	-ms-transform: translateX(-50%) translateY(-50%) rotate(-25deg);
+	-webkit-transform: translateX(-50%) translateY(-50%) rotate(-25deg);
+	transform: translateX(-50%) translateY(-50%) rotate(-25deg);
+}
             </style>
 </head>
 <body>
@@ -103,6 +117,10 @@
         <button type="submit" class="bubbly-button">Login</button>
     </form>
     </div>
+    <div style="padding-top: 5px;padding-left: 10px;">
+      <h3>Not Signed Up yet, Click here</h3>
+      <div align="center" class="col-md-3 col-sm-3 col-xs-6"> <a href="#" class="btn btn-sm animated-button victoria-one">Sign up</a> </div>
+    `</div>
     <script>
         var animateButton = function(e) {
       
@@ -122,5 +140,7 @@
         bubblyButtons[i].addEventListener('click', animateButton, false);
         }
       </script>
+       <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script> 
+       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 </body>
 </html>
