--- a/T45_DarkArmy/templates/home.html
+++ b/T45_DarkArmy/templates/home.html
@@ -34,7 +34,10 @@
             </div>
         </div>
     </div>
-    <div class="w3-content" style="max-width:2000px;margin-top:46px">
+    <div style="margin-top: 50px;" class="w3-center w3-padding-64" id="contact">
+      <span class="w3-xlarge w3-bottombar w3-border-dark-grey w3-padding-16">About Us</span>
+    </div>
+    <div class="w3-content" style="max-width:2000px;margin-top:20px">
         <!-- Automatic Slideshow Images -->
         <div class="mySlides w3-display-container w3-center">
           <img src="{% static 'hosp1.jpg' %}" style="width:100%">
