--- a/T45_DarkArmy/accounts/templates/accounts/dprofile.html
+++ b/T45_DarkArmy/accounts/templates/accounts/dprofile.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Doctor Sign Up</title>
+    <title>Profile Completion</title>
     <style>
         body {
             line-height: 1.8;
@@ -112,7 +112,7 @@
 <body>
     <div class="container">
         <div class="signup-content">
-    <h1>Signup Page</h1>
+    <h1>Complete Your Profile</h1>
     <form class="site-form" action="/accounts/profile/doctor/" method="POST">
         {% csrf_token %}
         {{form.as_p}}
