--- a/T45_DarkArmy/accounts/templates/accounts/ilogin.html
+++ b/T45_DarkArmy/accounts/templates/accounts/ilogin.html
@@ -118,9 +118,9 @@ a.animated-button.victoria-one:after {
     </form>
     </div>
     <div style="padding-top: 5px;padding-left: 10px;">
-      <h3>Not Signed Up yet, Click here</h3>
-      <div align="center" class="col-md-3 col-sm-3 col-xs-6"> <a href="#" class="btn btn-sm animated-button victoria-one">Sign up</a> </div>
-    `</div>
+      <h3>Not Signed Up yet, Click the Button Below</h3>
+      <div align="center" class="col-md-3 col-sm-3 col-xs-6"> <a href="{% url 'accounts:isignup' %}" class="btn btn-sm animated-button victoria-one">Sign up</a> </div>
+    </div>
     <script>
         var animateButton = function(e) {
       
