--- a/T45_DarkArmy/patients_p/templates/patients_p/patientp.html
+++ b/T45_DarkArmy/patients_p/templates/patients_p/patientp.html
@@ -5,7 +5,7 @@
     <title>Patient Profile</title>
 </head>
 <body>
-    <h3 align="center"><u>Your Profile</u></h3>
+    <h3 align="center"><u>Your Profile</u></h3> <h3 align="right"><a href="{% url 'accounts:nhosps' %}"> Add Your Injury</a></h3>
     First Name : {{patient.first_name}}<br>
     Last Name : {{patient.last_name}}<br>
     Email : {{patient.email_id}}<br>
