--- a/T45_DarkArmy/templates/home.html
+++ b/T45_DarkArmy/templates/home.html
@@ -11,18 +11,11 @@
 <body>
     <div class="w3-top">
         <div class="w3-row w3-large w3-light-grey">
-            <div class="w3-col s3">
-                <a href="#" class="w3-button w3-block">Home</a>
-              </div>
-              <div class="w3-col s3">
-                <a href="#" class="w3-button w3-block">Home</a>
-              </div>
-              <div class="w3-col s3">
-                <a href="#" class="w3-button w3-block">Home</a>
-              </div>
-              <div class="w3-col s3">
-                <a href="#" class="w3-button w3-block">Home</a>
-              </div>
+                {% if user.is_authenticated %}
+                <form class="logout" action="{% url 'accounts:logout'%}" method="POST">
+                {% csrf_token %}
+                <button style="border: none;" type="submit"> Logout</button><!-- iska placement thek kar -->
+                {% else %}
               <div class="w3-col s4">
                 <a href="{% url 'accounts:plogin' %}" class="w3-button w3-block" > Login for Patient</a>
             </div>
@@ -32,6 +25,8 @@
             <div class="w3-col s4">
                 <a href="{% url 'accounts:ilogin' %}" class="w3-button w3-block" > Login for Insurance Agents</a>
             </div>
+            {% endif %}
+            </form>
         </div>
     </div>
     <div style="margin-top: 50px;" class="w3-center w3-padding-64" id="contact">
