--- a/T45_DarkArmy/notifications/templates/notifications/noti.html
+++ b/T45_DarkArmy/notifications/templates/notifications/noti.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Notifications</title>
 </head>
 <body>
-
+<h1>You are notifications Index</h1>
 </body>
 </html>
