--- a/T45_DarkArmy/doctors_p/templates/doctors_p/doctorprofile.html
+++ b/T45_DarkArmy/doctors_p/templates/doctors_p/doctorprofile.html
@@ -104,8 +104,12 @@
   }
 </style>
 <body>
-<h1>Your Profile</h1>
-        {% if user.is_authenticated %}
+{% if user.is_authenticated %}
+
+                <h2 style="text-color:white;" align="right"><a href="{% url 'accounts:hreg'%}">Register a Hospital</a></h2>
+
+<h1> Your Profile</h1>
+
         <form class="logout" action="{% url 'accounts:logout'%}" method="POST">
             {% csrf_token %}
            Your First Name : {{doctor.first_name}}<br>
