--- a/T45_DarkArmy/templates/home.html
+++ b/T45_DarkArmy/templates/home.html
@@ -12,6 +12,10 @@
     <div class="w3-top">
         <div class="w3-row w3-large w3-light-grey">
                 {% if user.is_authenticated %}
+                <form action="{% url 'accounts:checkuser'%}" method="post">
+                    {% csrf_token %}
+                    <button style="border: none;" type="submit">Go to your Profile</button>
+                </form>
                 <form class="logout" action="{% url 'accounts:logout'%}" method="POST">
                 {% csrf_token %}
                 <button style="border: none;" type="submit"> Logout</button><!-- iska placement thek kar -->
