--- a/T45_DarkArmy/accounts/templates/accounts/ilogin.html
+++ b/T45_DarkArmy/accounts/templates/accounts/ilogin.html
@@ -107,6 +107,11 @@ a.animated-button.victoria-one:after {
     style="padding-top: 150px;
     padding-bottom: 50px;
      background-color:#ff6666">
+        {% if messages %}
+            {% for message in messages %}
+                <h4 align="center">{{message}}</h4>
+            {% endfor %}
+        {% endif %}
     <form class="site-form" action="{% url 'accounts:ilogin' %}" method="post">
         {%csrf_token%}
         <p class="text-white">{{ form.as_p }}</p>
