--- a/T45_DarkArmy/accounts/templates/accounts/suggestions.html
+++ b/T45_DarkArmy/accounts/templates/accounts/suggestions.html
@@ -39,7 +39,7 @@
 
     <span>If needed visit the nearest Hospital suggested above</span>
     </div>
-    {% if 'Cuts' in output %}
+    {% elif 'Cuts' in output %}
     <div>
     <span>If the cut is minor</span>
     <p>
