--- a/T45_DarkArmy/doctors_p/templates/doctors_p/doctorprofile.html
+++ b/T45_DarkArmy/doctors_p/templates/doctors_p/doctorprofile.html
@@ -119,6 +119,10 @@
         <div class="container">
         <h2 align="center">Your Treatments</h2>
         {% for treat in treatments %}
+            <form action="{% url 'doctor:tupdate'%}" method="post">
+                <input type="hidden" name="id" value={{treat.id}}>
+                <input type="submit" value="Update">
+            </form>
         Patient RFID : {{treat.patient.uid}}<br>
         Patient Name : {{treat.patient}}<br>
         Hospital Treated In : {{treat.hospital}}<br>
