--- a/T45_DarkArmy/doctors_p/templates/doctors_p/doctorprofile.html
+++ b/T45_DarkArmy/doctors_p/templates/doctors_p/doctorprofile.html
@@ -199,6 +199,17 @@ a.animated-button.thar-one:before {
 	background: #F7CA18;
 	transition: all 0.4s cubic-bezier(0.215, 0.61, 0.355, 1) 0s;
 }
+a.animated-button.victoria-two {
+	border: 2px solid #D24D57;
+  color: #000;
+}
+a.animated-button.victoria-two:after {
+	background: #D24D57;
+	-moz-transform: translateX(-50%) translateY(-50%) rotate(25deg);
+	-ms-transform: translateX(-50%) translateY(-50%) rotate(25deg);
+	-webkit-transform: translateX(-50%) translateY(-50%) rotate(25deg);
+	transform: translateX(-50%) translateY(-50%) rotate(25deg);
+}
 </style>
 <body>
 {% if user.is_authenticated %}
@@ -215,14 +226,7 @@ a.animated-button.thar-one:before {
         <div class="container">
         <h2 align="center">Your Treatments</h2>
         {% for treat in treatments %}
-<<<<<<< Updated upstream
-            <a href="{% url 'doctor:tupdate' id=treat.id %}">Update</a>
-=======
-            <form action="{% url 'doctor:tupdate'%}" method="post">
-                <input type="hidden" name="id" value={{treat.id}}>
-                <input type="submit" value="Update"><br>
-            </form>
->>>>>>> Stashed changes
+            <div class="col-md-3 col-sm-3 col-xs-6"><a class="btn btn-sm animated-button victoria-two" href="{% url 'doctor:tupdate' id=treat.id %}">Update</a></div>
         Patient RFID : {{treat.patient.uid}}<br>
         Patient Name : {{treat.patient}}<br>
         Hospital Treated In : {{treat.hospital}}<br>
