--- a/T45_DarkArmy/patients_p/templates/patients_p/patientp.html
+++ b/T45_DarkArmy/patients_p/templates/patients_p/patientp.html
@@ -138,12 +138,44 @@ a.animated-button.thar-one:before {
 	  background-size: 0% 0%, 0% 0%,  0% 0%,  0% 0%,  0% 0%,  0% 0%;
 	}
   }
+  a.animated-button.thar-three {
+	color: #fff;
+	cursor: pointer;
+	display: block;
+	position: relative;
+	border: 2px solid #F7CA18;
+	transition: all 0.4s cubic-bezier(0.42, 0, 0.58, 1);
+}
+a.animated-button.thar-three:hover {
+	color: #000 !important;
+	background-color: transparent;
+	text-shadow: nthree;
+}
+a.animated-button.thar-three:hover:before {
+	left: 0%;
+	right: auto;
+	width: 100%;
+}
+a.animated-button.thar-three:before {
+	display: block;
+	position: absolute;
+	top: 0px;
+	right: 0px;
+	height: 100%;
+	width: 0px;
+	z-index: -1;
+	content: '';
+	color: #000 !important;
+	background: #F7CA18;
+	transition: all 0.4s cubic-bezier(0.42, 0, 0.58, 1);
+}
 </style>
 <body>
     {% if user.is_authenticated %}
     <form class="logout" action="{% url 'accounts:logout'%}" method="POST">
         {% csrf_token %}
-    <h1>Your Profile</h1>
+	<h1>Your Profile</h1>
+	<div class="col-md-3 col-sm-3 col-xs-6"> <a href="#" class="btn btn-sm animated-button thar-three">Go To HomePage</a> </div>
     <div class="col-md-3 col-sm-3 col-xs-6"><a href="{% url 'accounts:nhosps' %}" class="btn btn-sm animated-button thar-one"> Add Your Injury</a></div><br><br><br><br><br>
     First Name : {{patient.first_name}}<br>
     Last Name : {{patient.last_name}}<br>
